# Data-Science-Project

./: pyproject.toml
notebooks/data_processing/: 01_pandas_intro.ipynb
notebooks/data_processing/Data Science Project/: Data Transformation.ipynb  Data_Merging.ipynb  Random Forest.ipynb  Untitled1.ipynb  Untitled2.ipynb
notebooks/exercises/: pandas_intro_exercise.ipynb
